# flow-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/flow-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: cli-improvements-backlog.md
docs/superpowers/plans/: 2026-04-17-v1-1-infrastructure.md  2026-04-17-v1-2-existing-resources.md  2026-04-17-v1-3-new-resources.md  2026-04-17-v1-4-cicd-release.md  2026-04-22-cli-ergonomics.md
docs/superpowers/specs/: 2026-04-17-v1-release-design.md  2026-04-22-cli-ergonomics-design.md
src/: cli.rs  client.rs  config.rs  handlers.rs  lib.rs  main.rs  output.rs
src/cli/: auth.rs  config.rs  configurations.rs  documents.rs  interfaces.rs  members.rs  mod.rs  orgs.rs  projects.rs  requirements.rs  systems.rs  test_cases.rs  test_cycles.rs  test_plans.rs  test_runs.rs  util.rs  values.rs
src/handlers/: auth.rs  config.rs  configurations.rs  documents.rs  interfaces.rs  members.rs  mod.rs  orgs.rs  projects.rs  requirements.rs  systems.rs  test_cases.rs  test_cycles.rs  test_plans.rs  test_runs.rs  util.rs  values.rs
tests/: helpers.rs  integration.rs  output.rs  unit.rs
tests/integration/: configurations.rs  documents.rs  interfaces.rs  members.rs  requirements.rs  systems.rs  test_cases.rs  test_cycles.rs  test_plans.rs  test_runs.rs  values.rs
tests/unit/: configurations.rs  documents.rs  interfaces.rs  members.rs  orgs.rs  payload.rs  requirements.rs  systems.rs  test_cases.rs  test_cycles.rs  test_plans.rs  test_runs.rs  values.rs
(+5 files in other folders)
