[package]
name = "flow-cli"
version = "1.0.2"
edition = "2024"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
dirs = "6.0.0"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "query",
  "rustls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
